@@ -2990,7 +2990,8 @@ void PublicTransport::processAlarmCreationRequest( const QDateTime& departure,
 
     // Add alarm filters
     if ( !departure.isNull() ) {
-        alarm.filter << Constraint(FilterByDeparture, FilterEquals, departure);
+        alarm.filter << Constraint(FilterByDepartureTime, FilterEquals, departure.time());
+        alarm.filter << Constraint(FilterByDepartureDate, FilterEquals, departure.date());
     }
     if ( !lineString.isEmpty() ) {
         alarm.filter << Constraint(FilterByTransportLine, FilterEquals, lineString);
@@ -3019,7 +3020,8 @@ void PublicTransport::processAlarmDeletionRequest( const QDateTime& departure,
     alarm.autoGenerated = true;
     alarm.affectedStops << m_settings.currentStopSettingsIndex;
     if ( !departure.isNull() ) {
-        alarm.filter << Constraint(FilterByDeparture, FilterEquals, departure);
+        alarm.filter << Constraint(FilterByDepartureTime, FilterEquals, departure.time());
+        alarm.filter << Constraint(FilterByDepartureDate, FilterEquals, departure.date());
     }
     if ( !lineString.isEmpty() ) {
         alarm.filter << Constraint(FilterByTransportLine, FilterEquals, lineString);
@@ -3060,7 +3062,8 @@ void PublicTransport::createAlarmSettingsForDeparture( const QPersistentModelInd
     AlarmSettings alarm;
     alarm.autoGenerated = true;
     alarm.affectedStops << m_settings.currentStopSettingsIndex;
-    alarm.filter.append( Constraint(FilterByDeparture, FilterEquals, info.departure()) );
+    alarm.filter.append( Constraint(FilterByDepartureTime, FilterEquals, info.departure().time()) );
+    alarm.filter.append( Constraint(FilterByDepartureDate, FilterEquals, info.departure().date()) );
     alarm.filter.append( Constraint(FilterByTransportLine, FilterEquals, info.lineString()) );
     alarm.filter.append( Constraint(FilterByVehicleType, FilterIsOneOf,
                                     QVariantList() << info.vehicleType()) );
